test/parserTest/fail/test11.ic
class BadWhile {
	void main () {
		while (x = 0;) { //statement not allowed in while condition - expected expression
			Library.println("hi");
		}
	}
}